--- a/index.html
+++ b/index.html
@@ -1,110 +1,114 @@
 <!DOCTYPE html>
+<html lang="zh-Hant">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>國立臺北教育大學114「教學科技應用設計競賽」實施辦法</title>
+  <style>
+    :root{--max-width:900px;--accent:#0b5ed7}
+    body{font-family:system-ui,-apple-system,"Segoe UI",Roboto,"Noto Sans",Helvetica,Arial,sans-serif;margin:0;color:# ;background:#fafafa}
+    .container{max-width:var(--max-width);margin:0 auto;padding:1rem}
+    header{background:#f8f9fa;border-bottom:1px solid #e9ecef}
+    nav{display:flex;gap:1rem;align-items:center}
+    a{color:var(--accent);text-decoration:none}
+    a:hover{text-decoration:underline}
+    main{padding:2rem 0}
+    footer{padding:1rem 0;color:#666;border-top:1px solid #e9ecef;text-align:center;font-size:.9rem}
+    h1{margin:.5rem 0}
+    .section-grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(220px,1fr));gap:1rem}
+    .card{padding:1rem;border:1px solid #e9ecef;border-radius:8px;background:#dedee0}
+  </style>
+</head>
+<body>
+  <header>
+    <div class="container">
+      <nav aria-label="主要導覽">
+        <a href="../">首頁</a>
+        <a href="#">作品</a>
+        <a href="#">關於</a>
+        <a href="#">聯絡</a>
+      </nav>
+    </div>
+  </header>
 
-<html lang="zh-hant">
-    <head>
-        <meta charset="utf-8">
-        <title>111419009林冠呈</title>
-        <meta name="viewport" content="width=devise=width, initiate-scale=1.0">
-    <head>
-    <body>
-        <!--1-->
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+  <main>
+    <div class="container">
+      <h1>國立臺北教育大學114「教學科技應用設計競賽」實施辦法</h1>
+      <p>一、活動主旨
+        <br>
+        <br>
+為鼓勵學生將數位科技應用於教學現場，強化教材設計與創作能力，特舉辦
+本競賽，期望學生能靈活運用 VR、AI 技術及 Apple 教育工具，並結合數位
+媒體、互動設計及多元評量方式，設計具創新性與實用性的教學應用，進而
+增強學生於各領域之數位內容科技創建能力。
+<br>
+<br>
+二、辦理單位
+<br>
+<br>
+主辦單位：國立臺北教育大學教學發展中心
+<br>
+<br>
+三、競賽辦法
+<br>
+<br>
+(一)參加對象：本校在學學生（含學士班、碩士班、碩士在職專班）。
+<br>
+(二)每團隊成員人數 1 至 4 人，並可邀請老師 1 名擔任團隊指導老師。
+<br>
+(三)每位學生最多可報名 2 件作品，但同一作品不得重複投件於不同類別。
+<br>
+<br>
+四、競賽主題與組別
+<br>
+依競賽主題類型分為以下三類別。
+</p>
 
-        <!--2-->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
+      <section class="section-grid" aria-label="範例區塊">
+        <article class="card">
+          <h2>(一)Uptale VR 教學應用設計組：</h2>
+          <p>計沉浸式教學場景，可包含與國小課程教材相關內容、各層面之教育
+議題、與真實情境有關之教學應用與學習規劃，展現虛擬實境於教學現
+場之應用潛能。</p>
+        </article>
+        <article class="card">
+          <h2>AI 小工具教學創新應用組：</h2>
+          <p>發展 AI 工具（如 ChatGPT、生成式 AI、學習分析工具等）於教學現場
+的應用，解決學習難題或提升學習成效。
+</p>
+        </article>
+        <article class="card">
+          <h2>)Apple 教育應用設計組：
+</h2>
+          <p>可包含教案設計（結合 iPad、Mac 等 Apple 生態系工具的數位教學設
+計），或應用程式設計（自行開發或利用 Swift/Swift Playgrounds 等
+進行教育應用創作）。</p>
 
-<!--導覽-->
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#">Navbar</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Dropdown
-          </a>
-          <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
-          </ul>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link disabled" aria-disabled="true">Disabled</a>
-        </li>
-      </ul>
-      <form class="d-flex" role="search">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"/>
-        <button class="btn btn-outline-success" type="submit">Search</button>
-      </form>
+        </article>
+      </section>
     </div>
-  </div>
-</nav>
-<!--BANNER-->
-<div id="carouselExampleIndicators" class="carousel slide">
-  <div class="carousel-indicators">
-    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-  </div>
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img src="./IMG20251014175839.png" class="d-block w-100" alt="...">
-    </div>
-    <div class="carousel-item">
-      <img src="./IMG20251025172348.png" class="d-block w-100" alt="...">
-    </div>
-    <div class="carousel-item">
-      <img src="./IMG20251102124541.png" class="d-block w-100" alt="...">
-    </div>
-    <div class="carousel-item">
-      <img src="./IMG20251029172739 (1).png" class="d-block w-100" alt="...">
-    </div>
-  </div>
-  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Previous</span>
-  </button>
-  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Next</span>
-  </button>
-</div>
-<!--CONTENT-->
-<div class="card" style="width: 18rem;">
-  <img src="..." class="card-img-top" alt="...">
-  <div class="card-body">
-    <h5 class="card-title">Card title</h5>
-    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
-    <a href="#" class="btn btn-primary">Go somewhere</a>
-  </div>
-</div>
-<div class="card" style="width: 18rem;">
-  <img src="..." class="card-img-top" alt="...">
-  <div class="card-body">
-    <h5 class="card-title">Card title</h5>
-    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
-    <a href="#" class="btn btn-primary">Go somewhere</a>
-  </div>
-</div>
-<div class="card" style="width: 18rem;">
-  <img src="..." class="card-img-top" alt="...">
-  <div class="card-body">
-    <h5 class="card-title">Card title</h5>
-    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
-    <a href="#" class="btn btn-primary">Go somewhere</a>
-  </div>
-</div>
-<!--FOOTER-->
+  </main>
+五、報名方式及日程
+<br>
+<br>
+(一)競賽報名：自即日起至 114 年 11 月 7 日(五)截止。
+競賽報名網址：https://forms.gle/Hs9SkDYpiAaB2J9p6
+<br>
+(二)繳件時間：自即日起至 114 年 12 月 14 日(日)截止。
+<br>
+(三)得獎名單公布：預計於 115 年 1 月底於「教學發展中心」網頁公布得獎
+名單，並以 Email 或電話通知領獎。
+<br>
+<br>
 
+  <footer>
+    <div class="container">
+      <p>&copy; 國立臺北教育大學
+        <br>電話：+886-2-2732-1104 +886-2-6639-6688
+        <br>網址： https://www.ntue.edu.tw
+        <br>地址：106320 臺北市大安區和平東路2段134號
+      </p>
+    </div>
+  </footer>
+</body>
 </html>
