--- a/index.html
+++ b/index.html
@@ -3,42 +3,184 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>基本網頁架構</title>
+    <title>基本網站架構</title>
+    <style>
+        body { font-family: Arial, sans-serif; margin: 0; padding: 0; }
+        nav {
+            background: #333;
+            color: #fff;
+            padding: 1em;
+            position: fixed;
+            top: 0;
+            width: 100%;
+            transform: translateY(-100%);
+            transition: transform 0.3s ease;
+            z-index: 1000;
+        }
+        nav.show {
+            transform: translateY(0);
+        }
+        nav ul { list-style: none; margin: 0; padding: 0; display: flex; }
+        nav ul li { margin-right: 1.5em; }
+        nav ul li a { color: #fff; text-decoration: none; }
+        .banner { background: #4a90e2; color: #fff; text-align: center; padding: 3em 1em; }
+        main { padding: 2em 1em; min-height: 300px; }
+        footer {
+            background: linear-gradient(to bottom, #f0d2f3 0%, #f5e9c8 100%);
+            color: #fff;
+            text-align: center;
+            padding: 2em 0 1em 0;
+        }
+        .footer-container {
+            display: flex;
+            justify-content: center;
+            align-items: flex-start;
+            max-width: 900px;
+            margin: 0 auto;
+            gap: 2em;
+        }
+        .footer-col {
+            flex: 1;
+            min-width: 180px;
+        }
+        .footer-col h3 {
+            margin-top: 0;
+            margin-bottom: 0.5em;
+            font-size: 1.1em;
+            color: #000000;
+        }
+        .footer-col a {
+            text-decoration: none;
+            font-weight: bold;
+        }
+        @media (max-width: 700px) {
+            .footer-container {
+                flex-direction: column;
+                align-items: center;
+                gap: 1em;
+            }
+        }
+
+        .banner-slider { position: relative; width: 100%; overflow: hidden; }
+        .slider-container { display: flex; transition: transform 0.5s ease; }
+        .slider-page { min-width: 100%; height: 400px; }
+        .slider-page img { width: 100%; height: 100%; object-fit: cover; }
+        .slider-btn { position: absolute; top: 50%; transform: translateY(-50%); background: rgba(0,0,0,0.5); color: #fff; border: none; padding: 1em; cursor: pointer; z-index: 10; }
+        .slider-btn.prev { left: 1em; }
+        .slider-btn.next { right: 1em; }
+        .slider-dots { text-align: center; padding: 1em 0; }
+        .dot { height: 12px; width: 12px; margin: 0 5px; background-color: #bbb; border-radius: 50%; display: inline-block; cursor: pointer; }
+        .dot.active { background-color: #717171; }
+    </style>
 </head>
 <body>
-    <h1>歡迎來到我的網站</h1>
-    <p>這是一個基本的網頁架構範例。</p>
-    <!--navbar-->
-
-    <!--banner-->
-
-    <!--main-->
-   
-    <!--footer-->
-    <footer style="background: linear-gradient(to right, #6a11cb 0%, #2575fc 100%); color: #fff; padding: 30px 0;">
-        <div style="display: flex; flex-direction: row; justify-content: space-around; align-items: stretch; max-width: 900px; margin: 0 auto; gap: 30px;">
-            <!-- 就讀系所 -->
-            <div style="flex:1; background: rgba(255,255,255,0.12); border-radius: 24px; padding: 24px; margin: 0 8px; display: flex; flex-direction: column; align-items: center; min-width: 0;">
-                <h3 style="margin-top:0;">就讀系所</h3>
-                <p>資訊工程學系</p>
+    <!-- (Navigation) -->
+    <nav>
+        <ul>
+            <li><a href="#top">首頁</a></li>
+            <li><a href="#banner">關於我</a></li>
+            <li><a href="#footer">聯絡我</a></li>
+        </ul>
+    </nav>
+    <!-- (Banner) -->
+    <div id="banner" class="banner">
+        <h1>歡迎來到冠呈的窩</h1>
+        <p>嗨! 我是林冠呈</p>
+        <div class="banner-slider">
+            <div class="slider-container">
+                <div class="slider-page">
+    <!-- (BANNER) -->
+                    <img src="IMG20251014175839.jpg" alt="Banner Image" style="width: 100%; height: auto;">
+                </div>
+                <div class="slider-page">
+                    <img src="IMG20251025172348.jpg" alt="Banner Image" style="width: 100%; height: auto;">
+                </div>
+                <div class="slider-page">
+                    <img src="IMG20251102124541.jpg" alt="Banner Image" style="width: 100%; height: auto;">
+                </div>
             </div>
-            <!-- 聯絡方式 -->
-            <div style="flex:1; background: rgba(255,255,255,0.12); border-radius: 24px; padding: 24px; margin: 0 8px; display: flex; flex-direction: column; align-items: center; min-width: 0;">
-                <h3 style="margin-top:0;">聯絡方式</h3>
-                <p>Email: example@mail.com</p>
-                <p>電話: 0912-345-678</p>
-            </div>
-            <!-- 社群網站 -->
-            <div style="flex:1; background: rgba(255,255,255,0.12); border-radius: 24px; padding: 24px; margin: 0 8px; display: flex; flex-direction: column; align-items: center; min-width: 0;">
-                <h3 style="margin-top:0;">社群網站</h3>
-                <a href="https://www.instagram.com/" target="_blank" style="color: #fff; margin-right: 10px; text-decoration: underline;">IG</a>
-                <a href="https://www.facebook.com/" target="_blank" style="color: #fff; text-decoration: underline;">FB</a>
+            <button class="slider-btn prev" onclick="slideLeft()">❮</button>
+            <button class="slider-btn next" onclick="slideRight()">❯</button>
+            <div class="slider-dots">
+                <span class="dot active" onclick="goToSlide(0)"></span>
+                <span class="dot" onclick="goToSlide(1)"></span>
+                <span class="dot" onclick="goToSlide(2)"></span>
             </div>
         </div>
-        <div style="text-align: center; margin-top: 20px;">
-            <p>版權所有 &copy; 2024</p>
+
+        <style>
+        .banner-slider { position: relative; width: 100%; overflow: hidden; }
+        .slider-container { display: flex; transition: transform 0.5s ease; }
+        .slider-page { min-width: 100%; height: 400px; }
+        .slider-page img { width: 100%; height: 100%; object-fit: cover; }
+        .slider-btn { position: absolute; top: 50%; transform: translateY(-50%); background: rgba(0,0,0,0.5); color: #fff; border: none; padding: 1em; cursor: pointer; z-index: 10; }
+        .slider-btn.prev { left: 1em; }
+        .slider-btn.next { right: 1em; }
+        .slider-dots { text-align: center; padding: 1em 0; }
+        .dot { height: 12px; width: 12px; margin: 0 5px; background-color: #bbb; border-radius: 50%; display: inline-block; cursor: pointer; }
+        .dot.active { background-color: #717171; }
+        </style>
+
+        <script>
+        let currentSlide = 0;
+        function slideLeft() { currentSlide = (currentSlide - 1 + 3) % 3; updateSlider(); }
+        function slideRight() { currentSlide = (currentSlide + 1) % 3; updateSlider(); }
+        function goToSlide(n) { currentSlide = n; updateSlider(); }
+        function updateSlider() {
+            document.querySelector('.slider-container').style.transform = `translateX(-${currentSlide * 100}%)`;
+            document.querySelectorAll('.dot').forEach((dot, i) => dot.classList.toggle('active', i === currentSlide));
+        }
+        </script>
+    </div>
+    <!--  (Main) -->
+    <main>
+        <h2>作品分享</h2>
+        <p>這裡是我的作品們</p>
+    <div style="display: grid; grid-template-columns: repeat(3, 1fr); gap: 2em; margin-top: 2em;">
+        <div style="border: 1px solid #ddd; border-radius: 8px; overflow: hidden;">
+            <iframe src="https://s111419009.github.io/%E6%89%A3%E7%9A%84/1103.html" style="width: 100%; height: 300px; border: none;"></iframe>
+        </div>
+        <div style="border: 1px solid #ddd; border-radius: 8px; overflow: hidden;">
+            <iframe src="https://s111419009.github.io/1014/" style="width: 100%; height: 300px; border: none;"></iframe>
+        </div>
+        <div style="border: 1px solid #ddd; border-radius: 8px; overflow: hidden;">
+            <iframe src="https://s111419009.github.io/1104/" style="width: 100%; height: 300px; border: none;"></iframe>
+        </div>
+    </div>
+    </main>
+    <!-- (Footer) -->
+    <footer id="footer">
+        <div class="footer-container">
+            <div class="footer-col">
+                <h3>就讀系所</h3>
+                <p>國立台北教育大學 <br>數位科技設計學系</p>
+            </div>
+            <div class="footer-col">
+                <h3>聯絡方式</h3>
+                <p>Email: example@mail.com<br>電話: 0800-000-123</p>
+                <p>地址:新北市新莊區</p>
+            </div>
+            <div class="footer-col">
+                <h3>社群網站</h3>
+                <a href="https://www.facebook.com" target="_blank" style="color:#000000; margin-right:10px;">FB:林冠呈</a>
+                <br>
+                <a href="https://www.instagram.com/linchen_117" target="_blank" style="color:#000000;">IG:linchen_117</a>
+            </div>
         </div>
     </footer>
 
+    <script>
+    let lastScrollY = window.scrollY;
+    const nav = document.querySelector('nav');
+
+    window.addEventListener('scroll', () => {
+        if (window.scrollY < lastScrollY) {
+            nav.classList.add('show');
+        } else {
+            nav.classList.remove('show');
+        }
+        lastScrollY = window.scrollY;
+    });
+    </script>
 </body>
 </html>
